@@ -1,5 +1,11 @@
 2007-08-13  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-scan.in:
+	* tests/bugs/src/tester.h:
+	  Really fix #460127.
+
+2007-08-13  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	  Now the 'broken' returns seems to work better. Fixes #380824 more.
 
